# DevID

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/migrations/: 0001_initial.sql  0002_auth.sql  0003_profile.sql
crates/api/src/: auth.rs  db.rs  main.rs  portfolio.rs  profile.rs  public.rs  state.rs
crates/api/src/repo/: mod.rs  portfolio.rs  profile.rs  session.rs  user.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  resume.rs  skill_aggregation.rs
crates/dict/: Cargo.toml
crates/dict/src/: certs.rs  lib.rs  skills.rs
docs/: README.dev.md  README.ja.md
web/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/u/[username]/: page.tsx
web/components/: Autocomplete.tsx  EmploymentForm.tsx  ProfileForm.tsx  ProjectForm.tsx  PublicPortfolioView.tsx  SkillExperienceTable.tsx  SkillPicker.tsx  TagList.tsx
web/lib/: api.ts  labels.ts  types.ts
