[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "json"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
oauth2 = "4.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
axum-extra = { version = "0.9", features = ["cookie"] }
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
time = "0.3"
