[package]
name = "yokogushi-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
yokogushi-core = { path = "../core" }
yokogushi-dict = { path = "../dict" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
